--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "npm run next-server",
     "next-server": "node ./src/server/app.js",
     "test": "run-s test:**",
-    "test:eslint": "eslint ./src",
+    "test:eslint": "eslint src/**/*.js src/**/*.jsx",
     "test:lint-styles": "stylelint \"src/client/**/*.pcss\"",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate"
@@ -30,28 +30,28 @@
     "@auxilin/common-logger": "0.2.0",
     "axios": "0.18.0",
     "classnames": "2.2.6",
-    "cssnano": "4.1.0",
+    "cssnano": "4.1.5",
     "find-up": "2.1.0",
-    "lodash": "4.17.10",
-    "mini-css-extract-plugin": "0.4.2",
-    "next": "7.0.0-canary.16",
+    "lodash": "4.17.11",
+    "mini-css-extract-plugin": "0.4.4",
+    "next": "7.0.2",
     "normalize.css": "8.0.0",
     "npm-run-all": "4.1.3",
     "postcss-import": "12.0.0",
     "postcss-nested": "4.1.0",
-    "postcss-preset-env": "5.3.0",
+    "postcss-preset-env": "6.1.2",
     "prop-types": "15.6.2",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-icon-base": "2.1.2",
-    "stylelint": "9.5.0",
+    "stylelint": "9.6.0",
     "stylelint-config-standard": "18.2.0"
   },
   "devDependencies": {
     "@auxilin/eslint-config": "0.1.1",
     "all-contributors-cli": "5.4.1",
     "babel-eslint": "10.0.1",
-    "babel-plugin-inline-react-svg": "0.5.4",
+    "babel-plugin-inline-react-svg": "1.0.0",
     "babel-plugin-module-resolver": "3.1.1",
     "css-loader": "1.0.0",
     "eslint": "5.3.0",
