--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "https://github.com/auxilincom/nextjs-landing-starter"
   },
+  "engines": {
+    "node": ">= 8"
+  },
   "scripts": {
     "development": "npm run next-server",
     "start": "npm run next-server",
@@ -27,14 +30,14 @@
     "generate-contributors": "all-contributors generate"
   },
   "dependencies": {
-    "@auxilin/common-logger": "0.3.1",
-    "axios": "0.18.0",
+    "@auxilin/common-logger": "0.3.2",
+    "axios": "0.19.0",
     "classnames": "2.2.6",
     "cssnano": "4.1.10",
-    "extract-css-chunks-webpack-plugin": "4.1.1",
-    "find-up": "3.0.0",
+    "extract-css-chunks-webpack-plugin": "4.5.2",
+    "find-up": "4.0.0",
     "lodash": "4.17.11",
-    "next": "8.0.3",
+    "next": "8.1.0",
     "normalize.css": "8.0.1",
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -42,23 +45,23 @@
     "postcss-nested": "4.1.2",
     "postcss-preset-env": "6.6.0",
     "prop-types": "15.7.2",
-    "react": "16.8.0",
-    "react-dom": "16.8.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-icon-base": "2.1.2",
-    "stylelint": "9.10.1",
-    "stylelint-config-standard": "18.2.0"
+    "stylelint": "10.1.0",
+    "stylelint-config-standard": "18.3.0"
   },
   "devDependencies": {
     "@auxilin/eslint-config": "0.1.1",
-    "all-contributors-cli": "6.2.0",
+    "all-contributors-cli": "6.6.1",
     "babel-eslint": "10.0.1",
-    "babel-plugin-inline-react-svg": "1.0.1",
+    "babel-plugin-inline-react-svg": "1.1.0",
     "babel-plugin-module-resolver": "3.2.0",
     "css-loader": "2.1.1",
-    "eslint": "5.15.3",
-    "eslint-plugin-import": "2.16.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-import": "2.17.3",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react": "7.13.0",
     "extracted-loader": "1.0.7",
     "postcss-loader": "3.0.0"
   }
