--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/auxilincom/nextjs-landing-starter"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 8.9.0"
   },
   "scripts": {
     "development": "npm run next-server",
@@ -30,20 +30,20 @@
     "generate-contributors": "all-contributors generate"
   },
   "dependencies": {
-    "@auxilin/common-logger": "0.3.2",
+    "@auxilin/common-logger": "0.4.0",
     "axios": "0.19.0",
     "classnames": "2.2.6",
     "cssnano": "4.1.10",
-    "extract-css-chunks-webpack-plugin": "4.5.2",
-    "find-up": "4.0.0",
-    "lodash": "4.17.11",
-    "next": "8.1.0",
+    "extract-css-chunks-webpack-plugin": "4.5.6",
+    "find-up": "4.1.0",
+    "lodash": "4.17.14",
+    "next": "9.0.2",
     "normalize.css": "8.0.1",
     "npm-run-all": "4.1.5",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-import": "12.0.1",
     "postcss-nested": "4.1.2",
-    "postcss-preset-env": "6.6.0",
+    "postcss-preset-env": "6.7.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -53,16 +53,16 @@
   },
   "devDependencies": {
     "@auxilin/eslint-config": "0.1.1",
-    "all-contributors-cli": "6.6.1",
-    "babel-eslint": "10.0.1",
-    "babel-plugin-inline-react-svg": "1.1.0",
+    "all-contributors-cli": "6.8.0",
+    "babel-eslint": "10.0.2",
     "babel-plugin-module-resolver": "3.2.0",
-    "css-loader": "2.1.1",
+    "css-loader": "3.1.0",
     "eslint": "5.16.0",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.2",
     "extracted-loader": "1.0.7",
-    "postcss-loader": "3.0.0"
+    "postcss-loader": "3.0.0",
+    "react-svg-loader": "3.0.3"
   }
 }
