--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,17 @@
-pipeline:
-  run-tests:
-    image: node:10.13.0
-    commands:
-      - chmod +x ./bin/drone-tests.sh
-      - ./bin/drone-tests.sh
-    when:
-      status: [ failure, success ]
-      event: [ pull_request, push ]
+kind: pipeline
+name: default
+
+steps:
+- name: run-tests
+  image: node:10.16.0
+  commands:
+  - chmod +x ./bin/drone-tests.sh
+  - ./bin/drone-tests.sh
+  when:
+    event:
+    - pull_request
+    - push
+
+trigger:
+  branch:
+  - master
